--- a/store_server/package.json
+++ b/store_server/package.json
@@ -1,14 +1,13 @@
 {
   "name": "store_server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
@@ -18,5 +17,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
